fix wrap of invite fixes FRONT-606

--- a/src/app/shared/components/modals/consultation-details/company-consultation-details/company-employee-row/company-employee-row.component.sass
+++ b/src/app/shared/components/modals/consultation-details/company-consultation-details/company-employee-row/company-employee-row.component.sass
@@ -30,3 +30,9 @@
           +subtitle
           font-weight: 500
           margin: 0 0 0 8px
+
+  &__action
+    margin: 0 0 0 8px
+
+.expert-name
+  word-break: break-all
